--- a/public/css/all.css
+++ b/public/css/all.css
@@ -53,6 +53,13 @@ table {
     max-width: 216px;
 }
 
+.cards::after {
+    content: "";
+    display: block;
+    width: 40rem;  
+    height: 0;
+}
+
 .bb-orange {
     background: url('/images/wave-orange.png') bottom repeat-x;
     background-size: 20px;
