--- a/public/css/all.css
+++ b/public/css/all.css
@@ -91,13 +91,19 @@ table {
  *  PC
 */
 @media screen and (min-width: 767px) {
+    .card {
+        width: 20rem;
+    }
     .cards::after {
         content: "";
         display: block;
         width: 40rem;
         height: 0;
     }
-
+    .shop-thumb {
+        max-width: auto;
+        max-height: 180px;
+    } 
 }
 
 .cond-content.is-select {
@@ -107,3 +113,12 @@ table {
 /**
  *  SP 
 */
+@media screen and (max-width: 766px) {
+    .card {
+        width: 180px;
+    }
+    .shop-thumb {
+        max-width: 150px;
+        max-height: auto;
+    } 
+}
